fix: hero section horizontal scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -92,7 +92,7 @@ video {
 
 .homepage-hero-bg {
   object-fit: contain;
-  width: 100vw;
+  width: 100%;
   top: 0;
   left: 0;
 }
